--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"contributors": [
 		"Mac Angell <mac.ang311@gmail.com>"
 	],
-	"version": "0.2.1",
+	"version": "0.3.0",
 	"dependencies": {
 		"statsd-client": "0.x.x",
 		"eidetic": "0.x.x"
@@ -14,7 +14,8 @@
 		"jshint": "2.x.x",
 		"travis-cov": "0.x.x",
 		"blanket": "1.x.x",
-		"node-dependencies": "0.x.x"
+		"node-dependencies": "0.x.x",
+		"hapi": "3.x.x"
 	},
 	"peerDependencies": {
 		"hapi": "3.x.x"
