--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
 	"contributors": [
 		"Mac Angell <mac.ang311@gmail.com>"
 	],
-	"version": "0.4.0",
+	"version": "0.4.1",
 	"dependencies": {
 		"statsd-client": "0.x.x",
-		"eidetic": "0.x.x"
+		"eidetic": "0.x.x",
+		"hoek": "2.x.x"
 	},
 	"devDependencies": {
 		"mocha": "1.x.x",
@@ -16,7 +17,8 @@
 		"blanket": "1.x.x",
 		"node-dependencies": "0.x.x",
 		"hapi": "4.x.x",
-		"hoek": "2.x.x"
+		"coveralls": "2.x.x",
+		"mocha-lcov-reporter": "0.x.x"
 	},
 	"peerDependencies": {
 		"hapi": "4.x.x"
@@ -41,7 +43,7 @@
 		"url": "git@github.com:mac-/hapi-statsd.git"
 	},
 	"scripts": {
-		"test": "make test && make test-cov"
+		"test": "make test && make test-cov && make test-lcov | ./node_modules/coveralls/bin/coveralls.js"
 	},
 	"config": {
 		"blanket": {
