--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,19 @@
 language: node_js
+
 node_js:
+  - 4.0
   - 4
+  - 5
+
+env:
+    - HAPI_VERSION="9"
+    - HAPI_VERSION="10"
+    - HAPI_VERSION="11"
+    - HAPI_VERSION="12"
+    - HAPI_VERSION="13"
+
+install:
+    - npm install
+    - npm install hapi@$HAPI_VERSION
+
+sudo: false
