--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   },
   "devDependencies": {
     "blanket": "1.x.x",
+    "code": "^2.1.0",
     "coveralls": "2.x.x",
     "hapi": "^13.0.0",
     "jshint": "2.x.x",
+    "lab": "^8.2.0",
     "mocha": "^2.4.5",
     "mocha-lcov-reporter": "^1.0.0",
     "node-dependencies": "0.x.x",
     "travis-cov": "0.x.x"
   },
   "peerDependencies": {
-    "hapi": "^9.0.1 || ^10.0.0 || ^11.0.0 || ^12.0.0 || ^13.0.0"
+    "hapi": ">=9.x.x"
   },
   "keywords": [
     "hapi",
@@ -42,19 +44,8 @@
     "url": "git@github.com:mac-/hapi-statsd.git"
   },
   "scripts": {
-    "test": "make test && make test-cov && make test-lcov | ./node_modules/coveralls/bin/coveralls.js"
-  },
-  "config": {
-    "blanket": {
-      "pattern": "//^((?!/node_modules/)(?!/test/).)*$/ig",
-      "onlyCwd": true,
-      "data-cover-flags": {
-        "branchTracking": true
-      }
-    },
-    "travis-cov": {
-      "threshold": -1
-    }
+    "test": "node node_modules/lab/bin/lab -t 100 -L -v",
+    "test-cov-html": "node node_modules/lab/bin/lab -r html -o coverage.html -L"
   },
   "license": "MIT"
 }
