--- a/package.json
+++ b/package.json
@@ -10,19 +10,12 @@
     "statsd-client": "0.x.x"
   },
   "devDependencies": {
-    "blanket": "1.x.x",
     "code": "^2.1.0",
-    "coveralls": "2.x.x",
     "hapi": "^13.0.0",
-    "jshint": "2.x.x",
-    "lab": "^8.2.0",
-    "mocha": "^2.4.5",
-    "mocha-lcov-reporter": "^1.0.0",
-    "node-dependencies": "0.x.x",
-    "travis-cov": "0.x.x"
+    "lab": "^8.2.0"
   },
   "peerDependencies": {
-    "hapi": ">=9.x.x"
+    "hapi": ">=11.x.x"
   },
   "keywords": [
     "hapi",
