--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "hapi-statsd",
+  "name": "bluestatsd",
   "description": "A hapi plugin for sending request round trip metrics to statsd",
   "contributors": [
+    "Catalin Tanasescu <catalint@gmail.com>",
     "Mac Angell <mac.ang311@gmail.com>"
   ],
-  "version": "4.0.1",
+  "version": "5.0.1",
   "dependencies": {
-    "hoek": "3.x.x",
-    "statsd-client": "0.x.x"
+    "hoek": "^3.0.4",
+    "statsd-client": "^0.2.2"
   },
   "devDependencies": {
-    "code": "^2.1.0",
-    "hapi": "^13.0.0",
-    "lab": "^8.2.0"
+    "code": "^2.2.0",
+    "hapi": "^13.3.0",
+    "lab": "^10.3.1"
   },
   "peerDependencies": {
     "hapi": ">=11.x.x"
@@ -29,12 +30,12 @@
     "round trip"
   ],
   "engines": {
-    "node": ">=4.0.0"
+    "node": ">=4.2.1"
   },
-  "main": "./lib/hapi-statsd.js",
+  "main": "./src/statsd.js",
   "repository": {
     "type": "git",
-    "url": "git@github.com:mac-/hapi-statsd.git"
+    "url": "git@github.com:catalint/bluestatsd.git"
   },
   "scripts": {
     "test": "node node_modules/lab/bin/lab -t 100 -L -v",
