--- a/package.json
+++ b/package.json
@@ -4,20 +4,19 @@
 	"contributors": [
 		"Mac Angell <mac.ang311@gmail.com>"
 	],
-	"version": "5.0.1",
+	"version": "6.0.0",
 	"dependencies": {
-		"statsd-client": "0.x.x",
-		"hoek": "3.x.x"
+		"statsd-client": "^0.2.4",
+		"hoek": "^4.1.0"
 	},
 	"devDependencies": {
-		"mocha": "1.x.x",
-		"jshint": "2.x.x",
+		"mocha": "^1.21.5",
+		"jshint": "^2.9.4",
 		"travis-cov": "0.x.x",
-		"blanket": "1.x.x",
-		"node-dependencies": "0.x.x",
+		"blanket": "^1.2.3",
 		"hapi": "^16.0.0",
-		"coveralls": "2.x.x",
-		"mocha-lcov-reporter": "0.x.x"
+		"coveralls": "^2.11.15",
+		"mocha-lcov-reporter": "^0.0.2"
 	},
 	"peerDependencies": {
 		"hapi": "^16.0.0"
