--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
 	"devDependencies": {
 		"mocha": "^4.0.1",
 		"jshint": "^2.9.4",
-		"travis-cov": "0.x.x",
+		"travis-cov": "^0.2.5",
 		"blanket": "^1.2.3",
 		"hapi": "^17.0.0",
-		"coveralls": "^2.11.15",
-		"mocha-lcov-reporter": "^0.0.2"
+		"coveralls": "^3.0.0",
+		"mocha-lcov-reporter": "^1.3.0"
 	},
 	"peerDependencies": {
 		"hapi": "^17.0.0"
