--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 	],
 	"version": "7.0.0",
 	"dependencies": {
-		"statsd-client": "^0.2.4",
-		"hoek": "^5.0.2"
+		"@hapi/hoek": "^6.0.0",
+		"statsd-client": "^0.2.4"
 	},
 	"devDependencies": {
 		"mocha": "^4.0.1",
@@ -19,7 +19,7 @@
 		"mocha-lcov-reporter": "^1.3.0"
 	},
 	"peerDependencies": {
-		"hapi": "^17.0.0"
+		"@hapi/hapi": "^18.0.0"
 	},
 	"keywords": [
 		"hapi",
