--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
 	],
 	"version": "8.0.1",
 	"dependencies": {
-		"statsd-client": "^0.4.5",
-		"hoek": "^6.1.3"
+		"@hapi/hoek": "^9.2.0",
+		"statsd-client": "^0.4.6"
 	},
 	"devDependencies": {
-		"mocha": "^4.0.1",
-		"jshint": "^2.9.4",
-		"travis-cov": "^0.2.5",
+		"@hapi/hapi": "^20.1.2",
 		"blanket": "^1.2.3",
-		"hapi": "^18.0.0",
 		"coveralls": "^3.0.0",
-		"mocha-lcov-reporter": "^1.3.0"
+		"jshint": "^2.9.4",
+		"mocha": "^4.0.1",
+		"mocha-lcov-reporter": "^1.3.0",
+		"travis-cov": "^0.2.5"
 	},
 	"peerDependencies": {
-		"hapi": "^18.0.0"
+		"@hapi/hapi": "^20.1.2"
 	},
 	"keywords": [
 		"hapi",
@@ -33,7 +33,7 @@
 		"round trip"
 	],
 	"engines": {
-		"node": ">=8.0.0"
+		"node": ">=12.0.0"
 	},
 	"main": "./lib/hapi-statsd.js",
 	"repository": {
