--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
 	},
 	"devDependencies": {
 		"@hapi/hapi": "^20.1.5",
-		"blanket": "^1.2.3",
 		"coveralls": "^3.0.0",
 		"jshint": "^2.9.4",
-		"mocha": "^4.0.1",
-		"mocha-lcov-reporter": "^1.3.0",
+		"mocha": "^9.0.2",
+		"nyc": "^15.1.0",
 		"travis-cov": "^0.2.5"
 	},
 	"peerDependencies": {
@@ -41,16 +40,9 @@
 		"url": "git@github.com:mac-/hapi-statsd.git"
 	},
 	"scripts": {
-		"test": "make test && make test-cov && make test-lcov | ./node_modules/coveralls/bin/coveralls.js"
+		"test": "nyc --reporter=text mocha test/integration"
 	},
 	"config": {
-		"blanket": {
-			"pattern": "//^((?!/node_modules/)(?!/test/).)*$/ig",
-			"onlyCwd": true,
-			"data-cover-flags": {
-				"branchTracking": true
-			}
-		},
 		"travis-cov": {
 			"threshold": -1
 		}
